Fixes header content overflow on x-axis of goals.html by increasing the break-point width of the media-query.

--- a/Personal_Projects/personal_project/_css/raw_styles.css
+++ b/Personal_Projects/personal_project/_css/raw_styles.css
@@ -369,7 +369,7 @@ h2 {
 }
 
 /* Page Two */
-@media (max-width: 660px) {
+@media (max-width: 750px) {
   h1 {
     font-size: 4em;
   }
