--- a/Personal_Projects/personal_project/_css/styles.css
+++ b/Personal_Projects/personal_project/_css/styles.css
@@ -423,7 +423,7 @@ h2 {
 }
 
 /* Page Two */
-@media (max-width: 660px) {
+@media (max-width: 750px) {
   h1 {
     font-size: 4em;
   }
